# sp1-contracts

./: .gitmodules  Cargo.toml  README.md  UPDATE_CONTRACTS.md
.github/workflows/: test.yml
contracts/: .env.example  .gitignore  .solhint.json  HANDOFF-v6-routes.md  README.md  check-routes.sh  foundry.toml
contracts/deployments/: 1.json  10.json  11155111.json  11155420.json  1625.json  17000.json  196.json  3151908.json  324.json  42161.json  421614.json  4217.json  52085145.json  534351.json  534352.json  56.json  560048.json  728126428.json  8453.json  84532.json  9745.json  999.json
contracts/safe-batches/: 10_add-route_v6_0_0.json  10_add-route_v6_1_0.json  10_freeze_v6_0_0.json  11155111_add-route_v6_0_0.json  11155420_add-route_v6_0_0.json  1_add-route_v6_0_0.json  1_add-route_v6_1_0.json  1_freeze_v6_0_0.json  421614_add-route_v6_0_0.json  42161_add-route_v6_0_0.json  42161_add-route_v6_1_0.json  42161_freeze_v6_0_0.json  534351_add-route_v6_0_0.json  534352_add-route_v6_0_0.json  84532_add-route_v6_0_0.json  8453_add-route_v6_0_0.json  8453_add-route_v6_1_0.json  8453_freeze_v6_0_0.json
contracts/script/: SP1Verifier.s.sol  verify.sh
contracts/script/deploy/: SP1Verifier.s.sol  SP1VerifierGateway.sol  (+3 more)
contracts/src/: Groth16Verifier.sol  ISP1Verifier.sol  ISP1VerifierGateway.sol  PlonkVerifier.sol  SP1MockVerifier.sol  SP1Verifier.sol  SP1VerifierGateway.sol
contracts/test/: SP1Verifier.t.sol  SP1VerifierGateway.t.sol  SP1VerifierGroth16.t.sol  SP1VerifierGroth16V6.sol  SP1VerifierPlonk.t.sol  SP1VerifierPlonkV6.t.sol
docs/: PRODUCTION_DEPLOYMENT.md
(+115 files in other folders)
