[package]
name = "sp1-contracts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "artifacts"
path = "src/bin/artifacts.rs"

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
log = "0.4.21"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "e5aba0ce59b06fed34b033a282fd8c2dec6e0c43" }
